# mail-it

./: .gitignore  LICENSE  README.md  meson.build  meson_options.txt
include/: button_inline_widget.h  config.h  config_inputbox.h  csv_utils.h  database_handler.h  email_config_inputbox.h  job.h  mail_handler.h  main_form.h  new_job_form.h  property.h  property_item.h  receipent.h  send_job.h  template_config_form.h  template_config_inputbox.h  textbox_inline_widget.h  util.h
src/: button_inline_widget.cpp  config_inputbox.cpp  csv_utils.cpp  database_handler.cpp  email_config_inputbox.cpp  mail_handler.cpp  main.cpp  main_form.cpp  new_job_form.cpp  send_job.cpp  template_config_form.cpp  template_config_inputbox.cpp  textbox_inline_widget.cpp  util.cpp
