option('nanogui_include_dir', type : 'string',  value: '/home/andreas/Downloads/nanogui/include/')
option('nanogui_dir', type : 'string',  value: '/home/andreas/Downloads/nanogui/')
option('sqlitecpp_include_dir', type : 'string',  value: '/home/andreas/Downloads/SQLiteCpp/include/')
option('sqlitecpp_dir', type : 'string',  value: '/home/andreas/Downloads/SQLiteCpp/')
option('csv_include_dir', type : 'string',  value: '/home/andreas/Downloads/csv-master/include/')
option('mailclient_include_dir', type : 'string',  value: '/home/andreas/Downloads/mailclient-cpp/MAIL/')
option('mailclient_dir', type : 'string',  value: '/home/andreas/Downloads/mailclient-cpp/lib/')
option('json_include_dir', type : 'string',  value: '/home/andreas/Downloads/json/single_include/')
option('inja_include_dir', type : 'string',  value: '/home/andreas/Downloads/inja/single_include/inja/')